--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "@google/markerclustererplus": "^2.1.10",
+    "body-parser": "^1.17.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "~2.4.1",
-    "express": "~4.13.4",
+    "debug": "^2.6.8",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
     "express-session": "^1.13.0",
-    "googleapis": "^9.0.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "googleapis": "^32.0.0",
+    "is-url": "^1.2.4",
+    "morgan": "^1.8.2",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.4.3"
   }
 }
